@@ -1,19 +1,22 @@
 --- #YAML:1.0
 name:               Acme-CPANAuthors-Pumpkings
-version:            2009111801
+version:            2009111901
 abstract:           We are pumpkings.
 author:
     - Abigail <cpan@abigail.be>
 license:            mit
 distribution_type:  module
 configure_requires:
+    Acme::CPANAuthors:    0
     ExtUtils::MakeMaker:  0
+    strict:               0
+    Test::More:           0.88
+    warnings:             0
 build_requires:
     Acme::CPANAuthors:    0
     ExtUtils::MakeMaker:  0
     strict:               0
-    Test::More:           0
-    Test::NoWarnings:     0
+    Test::More:           0.88
     warnings:             0
 requires:
     Acme::CPANAuthors::Register:  0
@@ -34,6 +37,5 @@ keywords:  []
 test_requires:
     Acme::CPANAuthors:  0
     strict:             0
-    Test::More:         0
-    Test::NoWarnings:   0
+    Test::More:         0.88
     warnings:           0
