@@ -37,8 +37,7 @@ my %args = (
         test_requires    => {
             'strict'             => 0,
             'warnings'           => 0,
-            'Test::More'         => 0,
-            'Test::NoWarnings'   => 0,
+            'Test::More'         => 0.88,
             'Acme::CPANAuthors'  => 0,
         },
         resources        => {
@@ -52,6 +51,9 @@ $args {META_MERGE} {build_requires} ||= {
     'ExtUtils::MakeMaker' =>  0,
     %{$args {META_MERGE} {test_requires}}
 };
+
+$args {META_MERGE} {configure_requires} ||=
+    $args {META_MERGE} {build_requires};
 
 my %filter = (
     MIN_PERL_VERSION     => '6.48',
